--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "clsx": "^1.1.1",
     "next": "^9.5.2",
     "react": "^16.13.1",
