--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "next": "^9.5.2",
     "react": "^16.13.1",
